Fix textarea placeholders being cut off on FF
Fix #11

--- a/clean.css
+++ b/clean.css
@@ -297,7 +297,9 @@ div[role="menu"] button {
     border: none !important;
 }
 .feed-comments textarea {
-    padding: 5px 5px 10px !important;
+    /* On FF the text will get cut off if we just use padding to create height. */
+    padding: 5px 5px 0 !important;
+    min-height: 1.7em !important;
 }
 .feed-comments .submit-span-wrapper {
     border: none !important;
